--- a/styles.css
+++ b/styles.css
@@ -12,21 +12,41 @@ h1 {
   color: white;
 }
 
-.textInput {
-  color: white;
-  text-align: center;
-  margin-bottom: 7px;
-  margin-right: 170px;
-}
-
 .inputContainer {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  margin: auto;
+  width: 20rem;
 }
 
-#name {
+.textLabel {
+  color: white;
+  text-align: left;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-bottom: 7px;
+  margin-top: 7px;
+}
+
+#inputBox {
   padding: 16px 20px;
-  border: 2px solid coral;
+  border: none;
   border-radius: 4px;
-  background-color: #f1f1f1;
+  background-color: lightgray;
+}
+
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(0, 102, 255);
+  opacity: 1;
+  /* Firefox */
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: rgb(0, 102, 255);
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: rgb(0, 102, 255);
 }
